sandbox/output
AnagramTest.java:19: error: cannot find symbol
        assertEquals("a", anagram.generate("a"));
                                 ^
  symbol:   method generate(String)
  location: variable anagram of type Anagram
1 error
